# petra

./: README.md
data_labeling/: CMakeLists.txt  README  README.md  package.xml
data_labeling/include/data_labeling/: data_labeling_one_person.h  data_labeling_with_petra.h
data_labeling/launch/: data_labeling_one_person.launch  data_labeling_with_petra.launch
data_labeling/msg/: DataLabelingBW.msg  data_labeling_one_person.launch
data_labeling/scripts/: gather_npy_data_bw.py  generate_npys_petra.sh  join_npy_files_bw.py  npy_to_images_bw.py
data_labeling/src/: data_labeling_one_person.cpp  data_labeling_with_petra.cpp
evaluation/: CMakeLists.txt  package.xml
evaluation/config/: parameters.yaml
evaluation/csv/: .~lock.paper_ICARSC.ods#
evaluation/include/evaluation/: evaluation.h
evaluation/launch/: evaluation.launch
evaluation/scripts/: evaluation.sh
evaluation/src/: evaluation.cpp
neuronal_network/: README.md  tf_keras_build_container
neuronal_network/tf_keras_folder/: execute.sh  train_neural_network.py
neuronal_network/training/: prerequisites.sh  train_export_model.sh  train_neural_network.py
petra/: CMakeLists.txt  package.xml
petra/config/: parameters.yaml
petra/include/petra/: correlation.h  kalmanFilterCorrelation.h  networkPrediction.h  personKalman.h  petra.h  processImage.h
petra/launch/: petra.launch  petra_rosbag.launch
petra/model/: model.pb  model_bootstrapping.pb  model_kio.pb
petra/msg/: Leg.msg  People.msg  Person.msg
petra/src/: correlation.cpp  kalmanFilterCorrelation.cpp  networkPrediction.cpp  petra.cpp  processImage.cpp
